[project]
name = "douyin-tool"
version = "0.1.0"
description = "抖音无水印视频下载 & 文本关键词提取工具"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "click>=8.0",
    "jieba>=0.42",
    "pydantic>=2.0",
    "playwright>=1.40",
    "jinja2>=3.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
douyin-tool = "cli:main"

[tool.setuptools.packages.find]
include = ["core*", "models*", "config*"]

[tool.setuptools]
py-modules = ["cli", "config", "main"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
